--- a/TestNGTests/build.gradle
+++ b/TestNGTests/build.gradle
@@ -21,4 +21,5 @@ repositories {
 dependencies {
     api "com.codeborne:selenide:6.11.0"
     api "org.testng:testng:7.6.1"
+    api "org.selenide:selenide-selenoid:2.3.3"
 }
